--- a/scss/style.scss
+++ b/scss/style.scss
@@ -72,21 +72,73 @@ h1 {
                 inset 4px 4px 10px rgba(0, 0, 0, 0.5),
                 inset -4px -4px 10px rgba(67, 67, 67, 0.3),
                 4px 4px 10px rgba(0, 0, 0, 0.3);
+                overflow: hidden;
     
     .tab-wrap {
-        display: flex;
-        gap: 20px;
+        
+        height: 100%;
+        
+        z-index: 2;
+        position: relative;
+        
+
+        .before {
+            width: 0%;
+            background: gold;
+        }
+        .before::before {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background: #f4f4f4;
+            animation: fromTop 1.2s ease forwards ;
+        }
+
+        .content {
+            display: flex;
+            gap: 20px;
+            animation: fromLeft 2s ease .9s forwards;
+            transform: translateX(-110%);
+        }
+
+        @keyframes fromTop {
+
+            0% {
+                transform: translateY(-100%);
+            }
+
+            100% {
+                transform: translateY(110%);
+            }
+            
+        }
+
+        @keyframes fromLeft {
+
+            0% {
+                transform: translateX(-100%);
+            }
+
+            100% {
+                transform: translateX(0%);
+            }
+            
+        }
 
         .left {
             width: 100%;
         }
 
         img {
-            max-width: auto;
+            // max-width: auto;
             width: 100%;
             align-self: center;
         }
+
+        
     }
+    
 }
 
 
